BaSP-W05-2022: Corrections to week 04 CSS --> 'Home' h1 and backround image, 'about-us' images width and 'header' icon aligning

--- a/semana-04/css/header.css
+++ b/semana-04/css/header.css
@@ -20,6 +20,9 @@ header .conteiner{
     height: auto;
     filter: #aace98;
 }
+#icon{
+    margin-left: 55px;
+}
 header button{
     height: 35px;
     width: 100px;
